# bazel-buildkite

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  go.mod  go.sum  main.py  main_test.go  out.txt  test_main.py
.buildkite/: pipeline.yml
.buildkite/hooks/: post-checkout
.buildlkite/: pipeline.yml
app/: main.py  requirements.txt  requirements_lock.txt
emojis/: BUILD.bazel  __init__.py  emojis.py  pyproject.toml  test_emojis.py
pipeline/: BUILD.bazel  main.py  requirements.txt  requirements_lock.txt  test_main.py
