load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "emojis",
    srcs = ["emojis.py"],
    visibility = ["//visibility:public"],
    deps = [],
)

py_test(
    name = "test_emojis",
    srcs = ["test_emojis.py"],
    deps = [
        ":emojis"
    ],
    imports = ["."],
)
